--- a/app/src/main/res/layout/historical_activity.xml
+++ b/app/src/main/res/layout/historical_activity.xml
@@ -14,6 +14,7 @@
         android:background="@color/warm_grey"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/text1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
