two activites and no dry

--- a/app/src/main/res/layout/historical_activity.xml
+++ b/app/src/main/res/layout/historical_activity.xml
@@ -1,190 +1,255 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#CECECE"
-    android:orientation="vertical">
+    android:weightSum="1"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Block 1 -->
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/Block1"
-        android:layout_width="165dp"
-        android:layout_height="@dimen/size_part"
-        android:background="@color/warm_grey"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.14"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/text1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/il_y_a_une_semaine"
             android:textSize="13sp"
             android:textStyle="bold"
-            android:text="@string/il_y_a_une_semaine" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <ImageView
             android:id="@+id/view_comment_button1"
             android:layout_width="20dp"
             android:layout_height="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="18dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="18dp"
             android:background="@drawable/ic_comment_black_48px"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="135dp" />
-    </LinearLayout>
+            android:contentDescription="@string/button1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
 
     <!-- Block 2 -->
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/Block2"
-        android:layout_width="110dp"
-        android:layout_height="@dimen/size_part"
-        android:background="@color/faded_red"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.14"
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/text2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/il_y_a_6_jours"
             android:textSize="13sp"
             android:textStyle="bold"
-            android:text="@string/il_y_a_6_jours" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <ImageView
             android:id="@+id/view_comment_button2"
             android:layout_width="20dp"
             android:layout_height="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="18dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="18dp"
             android:background="@drawable/ic_comment_black_48px"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="80dp" />
-
-    </LinearLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/button2" />
+    </android.support.constraint.ConstraintLayout>
 
     <!-- Block 3 -->
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/Block3"
-        android:layout_width="220dp"
-        android:layout_height="@dimen/size_part"
-        android:background="@color/cornflower_blue_65"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.14"
         android:orientation="vertical">
+
         <TextView
+            android:id="@+id/text3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/il_y_a_5_jours"
             android:textSize="13sp"
             android:textStyle="bold"
-            android:text="@string/il_y_a_5_jours"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <ImageView
             android:id="@+id/view_comment_button3"
             android:layout_width="20dp"
             android:layout_height="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="18dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="18dp"
             android:background="@drawable/ic_comment_black_48px"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="190dp"/>
-    </LinearLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/button3" />
+    </android.support.constraint.ConstraintLayout>
 
     <!-- Block 4 -->
-
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/Block4"
-        android:layout_width="275dp"
-        android:layout_height="@dimen/size_part"
-        android:background="@color/light_sage"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.14"
         android:orientation="vertical">
+
         <TextView
+            android:id="@+id/text4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/il_y_a_4_jours"
             android:textSize="13sp"
             android:textStyle="bold"
-            android:text="@string/il_y_a_4_jours"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <ImageView
             android:id="@+id/view_comment_button4"
             android:layout_width="20dp"
             android:layout_height="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="18dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="18dp"
             android:background="@drawable/ic_comment_black_48px"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="245dp"/>
-    </LinearLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/button4" />
+    </android.support.constraint.ConstraintLayout>
 
     <!-- Block 5 -->
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/Block5"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/size_part"
-        android:background="@color/banana_yellow"
+        android:layout_height="0dp"
+        android:layout_weight="0.14"
         android:orientation="vertical">
+
         <TextView
+            android:id="@+id/text5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/il_y_a_3_jours"
             android:textSize="13sp"
             android:textStyle="bold"
-            android:text="@string/il_y_a_3_jours"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <ImageView
             android:id="@+id/view_comment_button5"
             android:layout_width="20dp"
             android:layout_height="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="18dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="18dp"
             android:background="@drawable/ic_comment_black_48px"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="@dimen/margin"/>
-    </LinearLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/button5" />
+    </android.support.constraint.ConstraintLayout>
 
     <!-- Block 6 -->
-
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/Block6"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/size_part"
-        android:background="@color/banana_yellow"
+        android:layout_height="0dp"
+        android:layout_weight="0.15"
         android:orientation="vertical">
+
         <TextView
+            android:id="@+id/text6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/avant_hier"
             android:textSize="13sp"
             android:textStyle="bold"
-            android:text="@string/avant_hier"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <ImageView
             android:id="@+id/view_comment_button6"
             android:layout_width="20dp"
             android:layout_height="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="18dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="18dp"
             android:background="@drawable/ic_comment_black_48px"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="@dimen/margin"/>
-    </LinearLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/button6" />
+    </android.support.constraint.ConstraintLayout>
 
     <!-- Block 7 -->
-
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/Block7"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/banana_yellow"
+        android:layout_height="0dp"
+        android:layout_weight="0.15"
         android:orientation="vertical">
+
         <TextView
+            android:id="@+id/text7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/hier"
             android:textSize="13sp"
             android:textStyle="bold"
-            android:text="@string/hier"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <ImageView
             android:id="@+id/view_comment_button7"
             android:layout_width="20dp"
             android:layout_height="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="18dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="18dp"
             android:background="@drawable/ic_comment_black_48px"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="@dimen/margin"/>
-    </LinearLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/button7" />
+    </android.support.constraint.ConstraintLayout>
 
 </LinearLayout>
